--- a/src/main/java/ale2025/presentacion/MainForm.form
+++ b/src/main/java/ale2025/presentacion/MainForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ale2025.presentacion.MainForm">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1560" height="1048"/>
@@ -8,14 +8,13 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="a105f" class="javax.swing.JLabel">
+      <component id="a105f" class="javax.swing.JLabel" binding="imageLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
-          <icon value="images/clinicaimagen2.png"/>
           <text value=""/>
           <verticalAlignment value="1"/>
           <verticalTextPosition value="0"/>
