--- a/src/main/java/ale2025/presentacion/CitaWriteForm.form
+++ b/src/main/java/ale2025/presentacion/CitaWriteForm.form
@@ -68,14 +68,6 @@
           <text value="Costo de la consulta *"/>
         </properties>
       </component>
-      <component id="3eb3b" class="javax.swing.JTextField" binding="txtFechaCita">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="25687" class="javax.swing.JTextField" binding="txtCostoConsulta">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -106,6 +98,15 @@
           <text value="Cancelar"/>
         </properties>
       </component>
+      <grid id="8665e" binding="panelFechaCita" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
